Updating homepage to include new copy. Fixing element spacing. Adding global h1 styles.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,15 @@
       color: var(--color-bg-main);
     }
   }
+  h1,
+  h2,
+  h3,
+  h4 {
+    font-family: var(--font-display);
+  }
+  h1 {
+    @apply text-4xl leading-relaxed;
+  }
   p {
     font-family: var(--font-nudicaMono);
   }
